# manulo

./: README.md
final-project/: README.md
final-project/.github/ISSUE_TEMPLATE/: issue_template.md
final-project/backend/src/main/java/com/gigigenie/config/: RedisConfig.java  SecurityConfig.java  WebClientConfig.java
final-project/backend/src/main/java/com/gigigenie/domain/chat/controller/: ChatController.java
final-project/backend/src/main/java/com/gigigenie/domain/chat/dto/: ChatMessage.java  ChatRequest.java  FastApiRequest.java
final-project/backend/src/main/java/com/gigigenie/domain/chat/enums/: ChatRole.java
final-project/backend/src/main/java/com/gigigenie/domain/member/dto/: JoinDTO.java  (+3 more)
final-project/backend/src/main/java/com/gigigenie/exception/: CustomJWTException.java
final-project/backend/src/main/java/com/gigigenie/exception/advice/: CustomControllerAdvice.java
final-project/backend/src/main/java/com/gigigenie/security/filter/: JWTCheckFilter.java
final-project/backend/src/main/java/com/gigigenie/security/handler/: CustomAccessDeniedHandler.java
final-project/backend/src/main/java/com/gigigenie/util/: CookieUtil.java
final-project/backend/src/main/resources/: application-dev.yml  application-prod.yml  application.yml
final-project_AI/: .gitignore  README.md  pyproject.toml
final-project_AI/.github/ISSUE_TEMPLATE/: issue_template.md  pull_request_template.md
final-project_AI/app/: main.py
final-project_AI/app/api/: schemas.py
final-project_AI/app/core/: llm_client.py
final-project_AI/app/rag/: nodes.py  state.py  workflow.py
(+27 files in other folders)
